packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-20/reproducer.js
function foo(a) {
	const parts = a.split('/')
	parts[1].split(','); // Noncompliant
}

foo('a');